--- a/public/assets/themes/gid/css/style.css
+++ b/public/assets/themes/gid/css/style.css
@@ -3292,3 +3292,11 @@ h3.widget-title-modal {
 	padding-bottom:100%;
 	box-shadow: 0 0 2px rgba(0,0,0,.1)
 }
+.no-data{
+    padding: 60px 0;
+    text-align: center;
+    font-size: 30px;
+}
+.swal2-popup {
+  font-size: 0.6rem !important;
+}
