--- a/public/assets/themes/gid/css/style.css
+++ b/public/assets/themes/gid/css/style.css
@@ -316,9 +316,11 @@ blockquote {
     text-transform: uppercase;
     border-radius: 0;
 }
+input[type="submit"]:focus, 
+.btn.focus,
 .btn:focus {
     outline: none;
-    box-shadow: none
+    box-shadow: 0 0 0 0.2rem rgba(61, 181, 73, 0.2);
 }
 .btn:hover {
     background-color: #a2c147;
