--- a/public/assets/themes/gid/css/style.css
+++ b/public/assets/themes/gid/css/style.css
@@ -365,13 +365,15 @@ textarea.form-control{
 label + textarea {
     height: calc(100% - 24px);
 }
+select.form-control,
 select {
     padding: 9px 25px 9px 15px;
     background-color: #f1f2f3;
     background-image: url(../img/select-icon.png);
     background-repeat: no-repeat;
     background-position: center right;
-    border: none;
+    border-radius:0;
+	height: auto;
     color: #777777;
     line-height: 24px;
     width: 100%;
@@ -766,7 +768,10 @@ input[type="submit"]:hover {
     width: 290px;
     border-radius: 0;
 }
-.header-cart-product {}
+.header-cart-product {
+	max-height: calc(100vh - 245px);
+	overflow-y: auto;
+}
 .header-cart-product li {
     display: flex;
     flex-wrap: wrap;
@@ -1788,7 +1793,9 @@ form.search-box {
 }
 .comment-author img {
     border-radius: 100%;
+	border: 2px solid rgba(0,0,0,.1);
 }
+
 .comment-info::before {
     background: #ffffff none repeat scroll 0 0;
     border-bottom: 1px solid #ececec;
@@ -3302,4 +3309,11 @@ h3.widget-title-modal {
 }
 .swal2-popup {
   font-size: 0.6rem !important;
+}
+.word-wrap{
+    white-space: pre-wrap; /* css-3 */ 
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */ 
+    white-space: -pre-wrap; /* Opera 4-6 */ 
+    white-space: -o-pre-wrap; /* Opera 7 */ 
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
