--- a/public/assets/themes/gid/lib/css/nivo-slider.css
+++ b/public/assets/themes/gid/lib/css/nivo-slider.css
@@ -1,7 +1,6 @@
 .nivoSlider{position:relative;width:100%;height:auto;overflow:hidden;}
 .nivoSlider img{position:absolute;top:0px;left:0px;max-width:none;}
 .nivo-main-image{display:block !important;position:relative !important;width:100% !important;}
-.nivoSlider a.nivo-imageLink{position:absolute;top:0px;left:0px;width:100%;height:100%;border:0;padding:0;margin:0;z-index:6;display:none;background:white;filter:alpha(opacity=0);opacity:0;}
 .nivo-slice{display:block;position:absolute;z-index:5;height:100%;top:0;}
 .nivo-box{display:block;position:absolute;z-index:5;overflow:hidden;}
 .nivo-box img{display:block;}
@@ -16,7 +15,7 @@
 .nivo-controlNav a{cursor:pointer;}
 .nivo-controlNav a.active{font-weight:bold;}
 .slider-direction{position:absolute;left:0;top:0;width:100%;background:none;color:#fff;font-size:16px;z-index:999;display:none;}
-.nivoSlider a.nivo-imageLink{position:absolute;top:0px;left:0px;width:100%;height:100%;border:0;padding:0;margin:0;z-index:6;display:none;background:white;filter:alpha(opacity=0);opacity:0;}
+.nivoSlider a.nivo-imageLink{display: block;}
 .nivo-slice{display:block;position:absolute;z-index:5;height:100%;top:0;}
 .nivo-box{display:block;position:absolute;z-index:5;overflow:hidden;}
 .nivo-box img{display:block;}
