--- a/public/packages/browses/browses.css
+++ b/public/packages/browses/browses.css
@@ -1,6 +1,12 @@
+.browses{
+	margin: 0 -5px;
+}
 .browses >div{
 	width: 160px;
 	position: relative;
+	display: inline-block;
+	float:left;
+	margin: 5px;
 }
 .browses .dropify-wrapper{
 	height: 160px;
@@ -39,4 +45,74 @@
 	background: none;
     border: 1px solid #FFF;
     color: #fff;
+}
+
+body.dragging, body.dragging * {
+  cursor: move !important;
+}
+.browses ul{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+.browses ul li {
+	float: left;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid #e5e5e5;
+    background: #fff;
+	width: 160px;height: 160px;
+	position: relative;
+	
+}
+.browses ul li > div {
+	width: 100%;
+    height: 100%;
+	position: relative;
+}
+.browses ul li > span {
+	position: absolute;
+	top:0;left:0;
+	bottom:0;right:0;
+	background: rgba(0,0,0,.5);
+	opacity: 0;
+	transition: all 0.15s linear;
+}
+
+.browses ul li > span > button{
+	position: absolute;
+    z-index: 7;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: 1px solid #FFF;
+    font-weight: normal;
+    font-size: 11px;
+    padding: 4px 8px;
+    line-height: 16px;
+	color: #FFF;
+	opacity: 0;
+	transition: all 0.15s linear;
+}
+.browses ul li:hover > span > button,
+.browses ul li:hover > span {
+	opacity: 1
+}
+.browses ul li > div>img{
+	position: absolute;
+	top:0;left:0;
+	bottom:0;right:0;
+	margin: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
+.browses ul li.dragged,
+.browses ul li.ui-sortable-helper {
+	opacity: 0.5;
+	position: absolute;
+	z-index: 2000;
+}
+.browses ul li.placeholder ,
+.browses ul li.ui-state-highlight {
+  border-style: dashed 
 }
