--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -19,3 +19,30 @@
 	max-width: 100%;
 	max-height: 100%;
 }
+.modal-backdrop{
+	display: none;
+}
+.modal.flex-modal{
+	display: flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+.modal .box .box-footer>div{
+	width: 100%;
+}
+.modal .box .box-footer>div>label,
+.modal .box .box-tools{
+	display: none;
+}
+.modal .box{
+	border-top:0;
+	width: 520px;
+}
