--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -221,3 +221,172 @@
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label, .custom-file-input.is-invalid:focus ~ .custom-file-label {
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
+
+.form-group-2{
+  padding-top: 10px;
+}
+.form-group-2>div{
+  position: relative;
+  margin-top: 24px;
+}
+/* INPUT */
+
+.form-group-2>div textarea{
+  resize: vertical;
+}
+
+.form-group-2>div .select2 .select2-selection--single,
+.form-group-2>div .select2 .select2-selection--multiple,
+.form-group-2>div textarea,
+.form-group-2>div input[type="text"]{
+  border-color: transparent;
+  /* border-bottom: 1px solid #ccc; */
+  z-index: 2;
+  position: relative;
+  background: transparent;
+  box-shadow: none;
+}
+.form-group-2>div textarea+.cke_textarea_inline:focus{
+  outline: none;
+}
+.form-group-2>div textarea+.cke_textarea_inline{
+  min-height: 180px;
+  padding: 6px 12px;
+}
+.form-group-2>div textarea+.cke_textarea_inline ~ .line,
+.form-group-2>div .select2 ~ .line,
+.form-group-2>div textarea ~ .line,
+.form-group-2>div input[type="text"] ~ .line{
+  position: absolute;
+  background: #f9f9f9;
+  height: 1px;
+  /* top: 33px; */
+  bottom: 0;
+  left: 0; 
+  transition: all 0.5s;
+  width: 100%;
+  border-bottom: 1px solid #ccc;
+}
+.form-group-2 .form-control:invalid,
+.form-group-2.has-error .form-control,
+.form-group-2.has-error .form-control:focus{
+  border-color: transparent !important;
+  box-shadow: none;
+}
+
+.form-group-2>div .has-value+.select2:not(.select2-container--open) .select2-selection--single{
+  /* background: #f9f9f9; */
+}
+.form-group-2>div input[type="text"]:focus{
+}
+.form-group-2>div select.has-value ~ .line,
+.form-group-2>div input[type="text"].has-value ~ .line,
+.form-group-2>div input[type="text"]:focus ~ .line,
+.form-group-2>div textarea.has-value ~ .line,
+.form-group-2>div textarea:focus ~ .line{
+}
+.form-group-2>div textarea+.cke_textarea_inline.cke_focus ~ .line,
+.form-group-2>div .select2.select2-container--open ~ .line,
+.form-group-2>div input[type="text"].has-value:focus ~ .line,
+.form-group-2>div input[type="text"]:focus ~ .line,
+.form-group-2>div textarea.has-value:focus ~ .line,
+.form-group-2>div textarea:focus ~ .line{
+  height: 100%;
+  /* height: 34px; */
+  border-bottom: 1px solid #00BCD4;
+  background: #00bcd41f;
+}
+
+.form-group-2>div .select2.select2-container--open .select2-selection--single{
+  /* background: #00bcd41f; */
+}
+.form-group-2>div.checkbox2 > label,
+.form-group-2>div .select2+label,
+.form-group-2>div input[type="text"]+label,
+.form-group-2>div textarea+label,
+.form-group-2>div textarea+.cke_textarea_inline +label{
+  position: absolute;
+  top: 7px;left: 0;
+  font-weight: normal;
+  line-height: 20px;
+  margin: 0;
+  padding: 0 !important;
+  transition: 0.5s;
+  pointer-events: none;
+  color: #777;
+  width: 100%;
+  text-align: left;
+}
+.form-group-2>div textarea.has-value+.cke_textarea_inline +label,
+.form-group-2>div textarea+.cke_textarea_inline.cke_focus +label,
+.form-group-2 .select2.select2-container--focus+label,
+.form-group-2>div.checkbox2 > label,
+.form-group-2>div .has-value+.select2 + label,
+.form-group-2>div .select2.select2-container--open + label,
+.form-group-2>div input[type="text"].has-value + label,
+.form-group-2>div input[type="text"]:focus + label,
+.form-group-2>div textarea.has-value + label,
+.form-group-2>div textarea:focus + label{
+  top: -20px;
+  font-size: 12px;
+}
+
+
+.form-group-2>div input[type="text"].has-value:invalid:focus ~ .line,
+.form-group-2>div select:invalid+.select2.select2-container--open ~ .line,
+.form-group-2 input[type="text"]:invalid ~ .line,
+.form-group-2 textarea:invalid ~ .line,
+.form-group-2 textarea:invalid + .cke_textarea_inline ~ .line,
+.form-group-2 select:invalid ~ .line,
+.form-group-2 input[type="text"]:invalid:focus ~ .line,
+.form-group-2 input[type="text"]:focus:invalid ~ .line,
+.form-group-2 textarea:invalid:focus ~ .line,
+.form-group-2 select:invalid:focus ~ .line,
+.form-group-2 textarea:invalid + .cke_textarea_inline.cke_focus ~ .line,
+.form-group-2.has-error .form-control ~ .line{
+border-bottom-color: #FF5722;
+}
+.form-group-2.has-error label[for="inputError"]>.fa{
+  display: none;
+}
+.form-group-2.has-error label[for="inputError"]{
+  font-weight: normal;
+  color: #FF5722;
+  font-size: 12px;
+}
+/* INPUT */
+/* SELECT */
+.form-group-2 .select2 .select2-selection--single .select2-selection__placeholder{
+  color: transparent;
+}
+/* SELECT */
+
+.form-group-2>div textarea:focus{
+  border-color: transparent;
+}
+.form-group-2>div textarea ~ .line{
+
+}
+.form-group-2>div textarea:focus ~ .line{
+
+}
+.form-group-2 .select2 .select2-search__field{
+  opacity: 0;
+  background: none;
+  border-color: transparent !important;
+}
+.form-group-2 .select2.select2-container--focus .select2-search__field,
+.form-group-2 .select2.select2-container--open .select2-search__field{
+  opacity: 1;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__rendered{
+  float: left;
+}
+.form-group-2 .select2-container--default .select2-selection--multiple .select2-selection__choice{
+  margin: 2px;
+    padding: 1px 4px;
+    line-height: 20px;
+    background: #00BCD4;
+    border-color: transparent;
+    border-radius: 3px;
+}
