--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -379,7 +379,7 @@
 
 .document-editor-preview{
   position: absolute;
-    left: 50%;
+    left: 0;
     top: 0;
     padding: 10px;
     background: #fff;
@@ -388,14 +388,17 @@
     -moz-box-shadow: 0 0 20px #ccc;
     box-shadow: 0 0 20px #ccc;
     height: 880px;
-    -webkit-transform: scale(.25) translateX(-50%);
-    -moz-transform: scale(.25) translateX(-50%);
-    transform: scale(.25) translateX(-50%);
+    -webkit-transform: scale(.25);
+    -moz-transform: scale(.25);
+    transform: scale(.25);
     -webkit-transform-origin: top left;
     -moz-transform-origin: top left;
     transform-origin: top left;
     overflow: hidden;
     cursor: pointer;
+}
+.document-editor-preview * {
+  pointer-events: none;
 }
 .form-group-2 .document-editor-preview:empty{
   -webkit-box-shadow: 0 0 20px #ff572294;
