--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -229,6 +229,12 @@
   position: relative;
   margin-top: 24px;
 }
+.table-has-many .form-group-2{
+  padding-top: 0;
+}
+.table-has-many .form-group-2>div{
+  margin-top: 0;
+}
 /* INPUT */
 
 .form-group-2>div textarea{
@@ -562,4 +568,7 @@ body .ck.ck-balloon-panel{
 .box-info-default{
   max-width: 960px;
   margin: auto;
+}
+.form-group-2>div input + .bootstrap-datetimepicker-widget{
+  top: 34px !important;
 }
