--- a/public/packages/tui/tui-grid.css
+++ b/public/packages/tui/tui-grid.css
@@ -209,8 +209,8 @@
   height: 0;
   border-style: solid;
   border-width: 1px;
-  opacity: 0.1;
-  filter: alpha(opacity=10);
+  /* opacity: 0.1; */
+  /* filter: alpha(opacity=10); */
 }
 .tui-grid-layer-datepicker {
   /* width: calc(100% - 10px); */
